# ling

./: .gitattributes  .gitignore  .travis.yml  LICENSE  Lin.cf  Lin.hs  Lin.tex  Ling.cf  Ling.hs  Ling.tex  MiniC.cf  MiniCXX.cf  README.md  SEQUENCING.md  Tutorial.md  bnfc-regen.sh  build.sh  c2n-regen.sh  check.sh  cll.txt  default.nix  env.sh  flake.nix  lin.cabal  ling.cabal  ling.nix  mkdocs.yml  package.yaml  relink.sh  rules.txt  run-in-nix-shell  shell.nix  stack.yaml
Lin/: Abs.hs  Checker.hs  Constraint.hs  Doc.txt  ErrM.hs  Lex.x  Norm.hs  Par.y  Print.hs  Proc.hs  Proto.hs  Reify.hs  Rename.hs  Sequential.hs  Session.hs  Skel.hs  Subst.hs  Term.hs  Test.hs  Type.hs  Utils.hs  View.hs
Lin/Compile/: C.hs  CXX.hs
Lin/Print/: Instances.hs
Lin/Proc/: Checker.hs
Lin/Term/: Checker.hs
Ling/: Abs.hs  Constraint.hs  Defs.hs  Doc.txt  Equiv.hs  ErrM.hs  Fmt.hs  Free.hs  Fuse.hs  Fwd.hs  Layout.hs  Lex.x  Norm.hs  Par.y  Prelude.hs  Print.hs  Proc.hs  Proto.hs  Raw.hs  Reduce.hs  Reify.hs  Rename.hs  Scoped.hs  Sequential.hs  Session.hs  Skel.hs  SubTerms.hs  Subst.hs  Term.hs  Test.hs  Type.hs  Utils.hs  View.hs
Ling/Check/: Base.hs  Core.hs  Program.hs
Ling/Compile/: C.hs
Ling/Fmt/: Albert.cf  Benjamin.cf
Ling/Print/: Class.hs  Instances.hs
Ling/Proc/: Checker.hs
Ling/Proto/: Skel.hs
Ling/Session/: Core.hs
Ling/Term/: Checker.hs
MiniC/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
MiniCXX/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
docs/: index.md  left-overs.md  sequencing.md  tutorial.md
examples/: fft_par.ll  fft_seq.ll  fft_ten.ll
exec/: Main.hs  ling-fmt.hs
fixtures/: all.ll  success.ll
fixtures/all/: a_char.ll  anon_arg.ll  ap.ll  app_lambda.ll  assert.ll  assert_let_case_in_type.ll  at_end.ll  badCutSendRecv.ll  badTensor2.ll  bad_Log_1.ll  bad_Log_SInt_2.ll  bad_assert.ll  bad_cast.ll  bad_codomain.ll  bad_factor.ll  bad_sym_def.ll  bool.ll  case_bad_data.ll  case_con.ll  case_fun_server.ll  case_non_data.ll  case_non_data2.ll  case_proto.ll  case_proto2.ll  chan_escape.ll  com_new.ll  com_new_SInt_RBool2.ll  com_new_SType_SA.ll  com_new_mk_ten2.ll  com_with_log.ll  compose_ops.ll  con_dup.ll  confuseSendRecv2.ll  confuseSendRecv2_using_dual.ll  conv_fun.ll  curry.ll  cutEmptyParTensor.ll  cutSendRecv.ll  cut_par_cut.ll  cut_recv_send_send_recv.ll  (+301 more)
fixtures/compile/: a_char.ll  assert_let_case_in_type.ll  case_proto.ll  com_new.ll  com_new_mk_ten2.ll  cut_par_cut.ll  div_mod_server_par2_ten2_ten2.ll  div_mod_server_seq2_ten2_ten2.ll  double.ll  dual_dual.ll  equiv_repl_plus.ll  flexible_telescope.ll  fwd0_par2_ten2.ll  fwd1_par2_ten2_ten2.ll  fwd1_ten2_rcv.ll  fwd2_par2_ten2.ll  fwd_par0_ten0.ll  fwd_par2_ten2.ll  fwd_par2_ten2_expanded.ll  fwd_par2_ten2_ten2.ll  fwd_send_recv.ll  fwd_send_recv_recv_send.ll  fwd_seq2_seq2_seq2.ll  fwd_ten2_par2.ll  id.ll  infer_assert.ll  let42ann.ll  letrecv_ann.ll  matmul_seq.ll  merger_loli_Sort.ll  merger_nstSort_prll.ll  merger_nstSort_prll_v2.ll  merger_seq_Sort.ll  mk_ten2_2new_2fwd.ll  my_loli.ll  new_fuse1_recv_send_send_recv.ll  no_dead_lock_new_new_seq.ll  non_layout_decs.ll  par0.ll  par2mix.ll  (+23 more)
fixtures/failure/: badCutSendRecv.ll  badTensor2.ll  bad_Log_1.ll  bad_Log_SInt_2.ll  bad_assert.ll  bad_cast.ll  bad_codomain.ll  bad_factor.ll  bad_sym_def.ll  case_bad_data.ll  case_non_data.ll  case_non_data2.ll  chan_escape.ll  con_dup.ll  confuseSendRecv2.ll  confuseSendRecv2_using_dual.ll  data_dup.ll  dead_lock_new_new.ll  dead_lock_par_ten_ten.ll  dead_lock_tensor2_tensor2.ll  dup_send.ll  infer_plus.ll  infer_recv.ll  local_redef_fwd_par2_ten2_expanded.ll  local_redef_type_id.ll  merger_v2.ll  missingSend.ll  missingSendConfusesSendRecv.ll  missing_one_seq3.ll  not_comm_repl_plus.ll  not_sink_fwd1_snd.ll  over_application.ll  par_loli_ten.ll  redef.ll  redef_con.ll  redef_data.ll  redef_proc.ll  reusedParChannel.ll  reusedTensorChannel.ll  ten_par_par_seq.ll  (+73 more)
fixtures/fusion/: case_con.ll  curry.ll  cut_recv_send_send_recv.ll  div_mod_server_explicit_prll.ll  embed_send_42.ll  fake_div_mod_server_ten2.ll  feed_recv.ll  feed_send.ll  fun1_to_proc_ord.ll  fun1_to_proc_seq.ll  fwd0_snd0.ll  fwd_par2_ten2.ll  fwd_send_recv_recv_auto.ll  fwd_send_recv_recv_manually.ll  layout_case.ll  let_example.ll  letrecv.ll  mk_par2_RL.ll  new_ann_let_fuse0.ll  new_ann_let_fuse1.ll  new_fuse1_ten_recv.ll  new_ten2.ll  non_dep_recv_dom_args.ll  order.ll  par0.ll  par4_seq_send3.ll  par_loli_ten_send.ll  par_seq_back.ll  par_ten1_ten1.ll  plug_compose.ll  replicate_par.ll  seq0.ll  seq_seq_send2.ll  ten_loli_par.ll  uncurry.ll  zap_ten_seq.ll
fixtures/sequence/: ap.ll  case_fun_server.ll  case_proto2.ll  cutEmptyParTensor.ll  cut_par_cut.ll  cut_send_recv_recv_send.ll  cut_send_recv_recv_send_v2.ll  cut_send_recv_recv_send_with_log.ll  cut_send_recv_recv_send_with_log_prll.ll  dep_fun_server.ll  div_mod_server_par4.ll  div_mod_server_seq4.ll  div_mod_server_simple.ll  feed_send_par_recv.ll  fwd1_seq2_rcv.ll  fwd_par2_ten2.ll  fwd_par2_ten2_ten2.ll  fwd_par2_ten2_ten2_ten2.ll  fwd_parN_tenN.ll  fwd_send_recv_recv_send.ll  fwd_send_recv_recv_with_listener_manually.ll  fwd_ten2_par2.ll  id.ll  int_defs.ll  let42.ll  let_in_proc_for_session.ll  let_order_proc.ll  let_used_twice.ll  letsession.ll  lettype.ll  loli_id.ll  merger_seq.ll  merger_seq_Sort.ll  mk_new_ann.ll  mk_par2_LR.ll  mk_tensor2.ll  new_alloc.ll  new_seq_par_par.ll  par1.ll  par2.ll  (+21 more)
fixtures/strict-par-failure/: fwd_par2_ten2_ten2.ll  merger_ten2_loli_Sort.ll  par_ten_ten_v2.ll  pattern_example_expanded.ll  test_pat.ll
fixtures/strict-par-success/: fwd1_rcv.ll  (+21 more)
issues/: par_loli_ten.ll  par_loli_ten_send.ll
nix/: BNFC.nix  hfmt.nix  lens.nix  reflection.nix
tools/: cmdaccept  cmdcheck  cmdrecord
(+1095 files in other folders)
