name:                lin
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Nicolas Pouillard
maintainer:          nicolas.pouillard@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Lin
  build-tools: alex, happy
  main-is: Lin.hs
  ghc-options:       -Wall
  other-modules:     Lin.Lex, Lin.Par, MiniC.Lex, MiniC.Par
  -- other-extensions:
  build-depends:       base >=4.7 && <4.9, array, containers,
                       lens, mtl
  build-tools:         alex, happy
  -- hs-source-dirs:
  default-language:    Haskell2010
