name:                ling
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Nicolas Pouillard
maintainer:          nicolas.pouillard@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Ling
  main-is: Ling.hs
  ghc-options:       -Wall
  other-modules:
   Ling.Abs,
   Ling.Compile.C,
   Ling.Constraint,
   Ling.Equiv,
   Ling.ErrM,
   Ling.Lex,
   Ling.Norm,
   Ling.Par,
   Ling.Print,
   Ling.Print.Instances,
   Ling.Proc,
   Ling.Proc.Checker,
   Ling.Proto,
   Ling.Reify,
   Ling.Rename,
   Ling.Scoped,
   Ling.Sequential,
   Ling.Session,
   Ling.Subst,
   Ling.Term.Checker,
   Ling.Utils,
   MiniC.Abs,
   MiniC.Lex,
   MiniC.Par,
   MiniC.Print

  -- other-extensions:
  build-depends:       base >=4.7 && <4.9, array, containers,
                       lens, mtl
  build-tools:         alex, happy
  -- hs-source-dirs:
  default-language:    Haskell2010

executable ling-fmt
  main-is: Ling/Fmt.hs
  ghc-options: -Wall
  other-modules:
   Ling.Abs,
   Ling.Print,
   Ling.Fmt.Albert.Abs,
   Ling.Fmt.Albert.Lex,
   Ling.Fmt.Albert.Par

  -- other-extensions:
  build-depends:       base >=4.7 && <4.9, array, containers,
                       lens, mtl
  build-tools:         alex, happy
  -- hs-source-dirs:
  default-language:    Haskell2010
